@@ -7,6 +7,7 @@ Revision history for Git-Raw
     to Makefile.PL:
     + --with-curl-include
     + --with-curl-libs
+ - Enable support for OS X's Security framework
 
 0.53      2015-04-14 20:23:42+02:00 Africa/Johannesburg
 
